--- a/client/Trunk/Trunk.CSharp.csproj
+++ b/client/Trunk/Trunk.CSharp.csproj
@@ -15,10 +15,9 @@
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
     <CompilerResponseFile>Assets\smcs.rsp</CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
-    <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
+    <UnityBuildTarget>Android:13</UnityBuildTarget>
     <UnityVersion>5.4.3f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -28,7 +27,7 @@
     <IntermediateOutputPath>Temp\UnityVS_obj\Debug\</IntermediateOutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DefineConstants>DEBUG;TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_4_3;UNITY_5_4;UNITY_5;ENABLE_NEW_BUGREPORTER;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_EDITOR_RETINA;ENABLE_RETINA_GUISTYLES;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_SPRITE_POLYGON;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_LOCALIZATION;ENABLE_ANDROID_ATLAS_ETC1_COMPRESSION;ENABLE_EDITOR_TESTS_RUNNER;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_TEXTUREID_MAP;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_EVENT_QUEUE;ENABLE_CLUSTERINPUT;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;DEVELOPMENT_BUILD;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;UNITY_TEAM_LICENSE;ENABLE_VSTU;HOTFIX_ENABLE;</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_4_3;UNITY_5_4;UNITY_5;ENABLE_NEW_BUGREPORTER;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_EDITOR_RETINA;ENABLE_RETINA_GUISTYLES;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_SPRITE_POLYGON;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;INCLUDE_PUBNUB;ENABLE_LOCALIZATION;ENABLE_ANDROID_ATLAS_ETC1_COMPRESSION;ENABLE_EDITOR_TESTS_RUNNER;UNITY_ANDROID;UNITY_ANDROID_API;ENABLE_SUBSTANCE;UNITY_ANDROID_API;ENABLE_TEXTUREID_MAP;ENABLE_EGL;ENABLE_NETWORK;ENABLE_RUNTIME_GI;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;PLATFORM_SUPPORTS_ADS_ID;UNITY_CAN_SHOW_SPLASH_SCREEN;ENABLE_UNITYADS_RUNTIME;UNITY_UNITYADS_API;ENABLE_MONO;DEVELOPMENT_BUILD;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;UNITY_TEAM_LICENSE;ENABLE_VSTU;HOTFIX_ENABLE;/unsafe;</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -38,7 +37,7 @@
     <IntermediateOutputPath>Temp\UnityVS_obj\Release\</IntermediateOutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DefineConstants>TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_4_3;UNITY_5_4;UNITY_5;ENABLE_NEW_BUGREPORTER;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_EDITOR_RETINA;ENABLE_RETINA_GUISTYLES;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_SPRITE_POLYGON;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_LOCALIZATION;ENABLE_ANDROID_ATLAS_ETC1_COMPRESSION;ENABLE_EDITOR_TESTS_RUNNER;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_TEXTUREID_MAP;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_EVENT_QUEUE;ENABLE_CLUSTERINPUT;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;DEVELOPMENT_BUILD;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;UNITY_TEAM_LICENSE;ENABLE_VSTU;HOTFIX_ENABLE;</DefineConstants>
+    <DefineConstants>TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_4_3;UNITY_5_4;UNITY_5;ENABLE_NEW_BUGREPORTER;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_EDITOR_RETINA;ENABLE_RETINA_GUISTYLES;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_SPRITE_POLYGON;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;INCLUDE_PUBNUB;ENABLE_LOCALIZATION;ENABLE_ANDROID_ATLAS_ETC1_COMPRESSION;ENABLE_EDITOR_TESTS_RUNNER;UNITY_ANDROID;UNITY_ANDROID_API;ENABLE_SUBSTANCE;UNITY_ANDROID_API;ENABLE_TEXTUREID_MAP;ENABLE_EGL;ENABLE_NETWORK;ENABLE_RUNTIME_GI;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;PLATFORM_SUPPORTS_ADS_ID;UNITY_CAN_SHOW_SPLASH_SCREEN;ENABLE_UNITYADS_RUNTIME;UNITY_UNITYADS_API;ENABLE_MONO;DEVELOPMENT_BUILD;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;UNITY_TEAM_LICENSE;ENABLE_VSTU;HOTFIX_ENABLE;/unsafe;</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
@@ -82,34 +81,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Model\Effects\Scripts\Demo\MyGuiV2.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Prefabs\Balls\AddMaterialOnHit.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Prefabs\Balls\AnimatorBehaviour.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Prefabs\Balls\LazyLoad.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Prefabs\Balls\ProjectileCollisionBehaviour.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Prefabs\Balls\SetRandomStartPoint.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Prefabs\Buffs\ShieldCollisionBehaviour.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Prefabs\Objects\MoveOnGround.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Prefabs\Shots\LineRendererBehaviour.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Prefabs\Waves\ClothGridCollisionBehaviour.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Prefabs\Waves\InstanceMaterial.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Share\Billboard.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Share\CollisionActiveBehaviour.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Share\DeadTime.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Share\EffectSettings.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Share\FadeInOutLight.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Share\FadeInOutParticles.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Share\FadeInOutScale.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Share\FadeInOutShaderColor.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Share\FadeInOutShaderFloat.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Share\FadeInOutStatus.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Share\InvokeInterval.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Share\OnStartSendCollision.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Share\RandomRotateOnStart.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Share\SetPositionOnHit.cs" />
-    <Compile Include="Assets\Model\Effects\Scripts\Share\UVTextureAnimator.cs" />
-    <Compile Include="Assets\Model\Effects\Standard Assets\Image Effects (Pro Only)\ImageEffectBase.cs" />
-    <Compile Include="Assets\Model\Effects\Standard Assets\Image Effects (Pro Only)\ImageEffects.cs" />
     <Compile Include="Assets\Scripts\BaseSystem\ApplicationFacde.cs" />
     <Compile Include="Assets\Scripts\BaseSystem\Config\GameConfig.cs" />
     <Compile Include="Assets\Scripts\BaseSystem\Config\PlayerProperty.cs" />
@@ -167,14 +138,14 @@
     <Compile Include="Assets\Scripts\Common\Singleton.cs" />
     <Compile Include="Assets\Scripts\MapModules\Camera\CameraMovement.cs" />
     <Compile Include="Assets\Scripts\MapModules\Camera\CmeraRenderTexture.cs" />
-    <Compile Include="Assets\Scripts\MapModules\Charcter\AnimationView.cs" />
+    <Compile Include="Assets\Scripts\MapModules\Charcter\Data\LeitaiCharcterProxy.cs" />
+    <Compile Include="Assets\Scripts\MapModules\Charcter\Data\VO\WorldPlayerInfoVO.cs" />
     <Compile Include="Assets\Scripts\MapModules\Charcter\Enemy\EnemyStateUiView.cs" />
-    <Compile Include="Assets\Scripts\MapModules\Charcter\HpandNameUiView.cs" />
     <Compile Include="Assets\Scripts\MapModules\Charcter\Player\Data\ModelMoveVO.cs" />
     <Compile Include="Assets\Scripts\MapModules\Charcter\Player\View\PlayerMoveView.cs" />
     <Compile Include="Assets\Scripts\MapModules\Charcter\Player\View\PlayerNavigationView.cs" />
     <Compile Include="Assets\Scripts\MapModules\Charcter\Player\View\PlayerStateUiVIew.cs" />
-    <Compile Include="Assets\Scripts\MapModules\Charcter\Player\View\WorldPlayerBattleMediator.cs" />
+    <Compile Include="Assets\Scripts\MapModules\Charcter\WorldPlayerBattleMediator.cs" />
     <Compile Include="Assets\Scripts\MapModules\ModelController\BaseModelController.cs" />
     <Compile Include="Assets\Scripts\MapModules\ModelController\PlayerMoelController.cs" />
     <Compile Include="Assets\Scripts\MapModules\Skill\Data\Meta\Action\SkillAnimationMeta.cs" />
@@ -200,34 +171,12 @@
     <Compile Include="Assets\Scripts\UIModules\Login\View\LoginUI.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\Model\Effects\Standard Assets\Image Effects (Pro Only)\_Sources\Shaders\_BloomAndFlares\BlendForBloom.shader" />
-    <None Include="Assets\Model\Effects\Standard Assets\Image Effects (Pro Only)\_Sources\Shaders\_BloomAndFlares\BlurAndFlares.shader" />
-    <None Include="Assets\Model\Effects\Standard Assets\Image Effects (Pro Only)\_Sources\Shaders\_BloomAndFlares\BrightPassFilter2.shader" />
-    <None Include="Assets\Model\Effects\Standard Assets\Image Effects (Pro Only)\_Sources\Shaders\_BloomAndFlares\LensFlareCreate.shader" />
     <None Include="Assets\Model\Enemy\Masked Orc\Read Me.txt" />
-    <None Include="Assets\Model\villarger_B_Boy\ReadMe [V 1.4]  02 06.txt" />
-    <None Include="Assets\Other\Shader\EffectShader\FXMaker_Mask Additive Tint.shader" />
     <None Include="Assets\Plugins\AutoQualityChooser\Read Me.txt" />
-    <None Include="Assets\Plugins\Cinema Suite\Cinema Director\ChangeLog.txt" />
-    <None Include="Assets\Plugins\Cinema Suite\Cinema Director\Example Scenes\Shaders\Additive.shader" />
-    <None Include="Assets\Plugins\Cinema Suite\Cinema Director\ReadMe.txt" />
-    <None Include="Assets\Plugins\Cinema Suite\Cinema Director\link.xml" />
     <None Include="Assets\Plugins\DOTween\DOTween.XML" />
     <None Include="Assets\Plugins\DOTween\Editor\DOTweenEditor.XML" />
     <None Include="Assets\Plugins\DOTween\readme.txt" />
     <None Include="Assets\Plugins\protobuf-net\Web\TODO.txt" />
-    <None Include="Assets\Standard Assets\Core\Shader\Illumin-Diff-BLight.shader" />
-    <None Include="Assets\Standard Assets\Core\Shader\Illumin-DiffuseAndAlpha.shader" />
-    <None Include="Assets\Standard Assets\Core\Shader\Illumin-DiffuseAndAlphaTest.shader" />
-    <None Include="Assets\Standard Assets\Core\Shader\Illumin-diff-2P-ATest-Blight.shader" />
-    <None Include="Assets\Standard Assets\Core\Shader\Illumin-diff-2P-Blight.shader" />
-    <None Include="Assets\Standard Assets\Core\Shader\Illumin-diff-ATest-Blight.shader" />
-    <None Include="Assets\Standard Assets\Core\Shader\ModelRTT.shader" />
-    <None Include="Assets\Standard Assets\Core\Shader\NPCModelRTT.shader" />
-    <None Include="Assets\Standard Assets\Core\Shader\PlayerModelRTT.shader" />
-    <None Include="Assets\Standard Assets\Core\Shader\xf_heat_distortion.shader" />
-    <None Include="Assets\Textures\005-number combo\number_font.fnt" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2013\UnityVS.CSharp.targets" />
 </Project>
